# coq-waterproof

./: .dir-locals.el  .gitignore  CHANGES.md  ChangeLog.md  Changelog.md  Developer-instructions.md  Dockerfile  Makefile  Makefile.conf  Makefile.in  Makefile.local  README.md  _CoqProject  _CoqProject.in  _CoqProjectForMake  configure.ac  coq-waterproof.opam  dune-project  sample_proof.v
theories/: Automation.v  ChainManipulation.v  Chains.v  Databases.v  Hints.v  InequalityChains.v  MathComp.v  Notations.v  Reals.v  Tactics.v  Version.v  Waterproof.v  Waterprove.v  dune
theories/Automation/: Framework.v  Hints.v
theories/Chains/: Inequalities.v  Manipulation.v
theories/Libs/: Analysis.v  Functions.v  Integers.v  Logic.v  Negation.v  Reals.v  Sets.v
theories/Libs/Algebra/: Algebra.v  BigOp.v
theories/Libs/Analysis/: ContinuityDomainNat.v  ContinuityDomainR.v  LimsupLiminfBolzano.v  MetricSpaces.v  OpenAndClosed.v  Reals.v  Sequences.v  SequencesMetric.v  SequentialAccumulationPoints.v  Series.v  StrongInductionIndexSequence.v  Subsequences.v  SubsequencesInduction.v  SubsequencesMetric.v  SupAndInf.v
theories/Libs/Integers/: Dividability.v  Divisibility.v  Even.v  Square.v
theories/Libs/Logic/: ConstructiveLogic.v  InformativeEpsilon.v  Quantification.v
theories/Libs/Notations/: Functions.v
theories/Libs/Reals/: ArchimedN.v  Integer.v  Intervals.v  Rational.v  RealInequalities.v
theories/Libs/Sets/: IndexedOperations.v  Operations.v
theories/MathComp/: DisjunctionTactic.v  IfTactic.v
theories/Notations/: Common.v  Functions.v  IndexedSets.v  Integers.v  Placeholders.v  Reals.v  Reals2.v  RealsWithSubsets.v  Sets.v  Sets2.v  test.v
theories/Tactics/: Assume.v  Because.v  BothDirections.v  BothStatements.v  By.v  Choose.v  Claims.v  Conclusion.v  Contradiction.v  Define.v  Either.v  Help.v  HelpNewHyp.v  Induction.v  ItHolds.v  ItSuffices.v  Obtain.v  Sets.v  Specialize.v  Take.v  ToShow.v  Unfold.v
theories/Util/: Assertions.v  Binders.v  BySince.v  Constr.v  ConvertStrings.v  EnsureProp.v  Evars.v  Goals.v  Hypothesis.v  Init.v  Lock.v  MessagesToUser.v  Since.v  TypeCorrector.v  TypeForAssert.v
theories/tactics/: we_show_both_directions.v
waterproof/: .AllTactics.aux  .auxiliary.aux  .databases.aux  .selected_databases.aux  .string_auxiliary.aux  .test_auxiliary.aux  AllConstructiveTactics.v  AllTactics.v  _CoqProject  auxiliary.v  databases.v  debug.v  dune  get_all_tactic_files.sh  get_all_tactic_imports.sh  get_all_testcases.sh  init_automation_global_variables.v  load.v  message.v  populate_database.v  remove_compiled.sh  sample_proof.v  selected_databases.v  string_auxiliary.v  test_auxiliary.v  todo.md
waterproof/contradiction_tactics/: .basic_contradiction.aux  basic_contradiction.v
waterproof/definitions/: .set_definitions.aux  .subsequences.aux  inequality_chains.v  set_definitions.v  subsequences.v  subsequences_definitions.v
waterproof/deprecated/: assume.v  assume_deprecated.v  assume_test.v  databases_test.v  deprecated_collect_db.v  dev_compile.sh  load_databases_demo.v  test_unfold.v
waterproof/deprecated/Undesired tactics/: apply.v  proof_finishing_tactics.v  rewrite_inequalities.v  (+10 more)
waterproof/experiments/: choose_experiment.v  math_function_notation.v  rewrite_ineq.v  subset_notation.v  type_classes_and_coercions.v
waterproof/load_database/: .AbsoluteValue.aux  .Additional.aux  .All.aux  .ClassicalLogic.aux  .DisableWildcard.aux  .EnableWildcard.aux  .Exponential.aux  .General.aux  .Multiplication.aux  .Other.aux  .PlusMinus.aux  .RealsAndIntegers.aux  .Sets.aux  .SquareRoot.aux  .ZeroOne.aux  .reals.aux  AbsoluteValue.v  Additional.v  Algebra.v  All.v  ClassicalLogic.v  ConstructiveLogic.v  DisableWildcard.v  EnableWildcard.v  Exponential.v  Firstorder.v  Integers.v  Intuition.v  Multiplication.v  Other.v  PlusMinus.v  README.md  RealNumbers.v  RealsAndIntegers.v  Sets.v  SquareRoot.v  Subsets.v  ZeroOne.v  reals.v
waterproof/notations/: .notations.aux  .set_notations.aux  notations.v  set_notations.v
waterproof/populate_database/: all_databases.v  other_databases.v  waterproof_classical_logic.v  waterproof_constructive_logic.v  waterproof_core.v  waterproof_decidability_classical.v  waterproof_decidability_nat.v  waterproof_decidability_reals.v  waterproof_eq_abs.v  waterproof_eq_exp.v  waterproof_eq_minus.v  waterproof_eq_mult.v  waterproof_eq_one.v  waterproof_eq_opp.v  waterproof_eq_plus.v  waterproof_eq_sqr.v  waterproof_eq_zero.v  waterproof_firstorder.v  waterproof_integers.v  waterproof_intuition.v  waterproof_negation_int.v  waterproof_negation_nat.v  waterproof_negation_reals.v  waterproof_reals.v  waterproof_subsets.v
waterproof/set_debug_level/: Debug.v  Info.v  Off.v
waterproof/set_intuition/: .Disabled.aux  .Enabled.aux  Disabled.v  Enabled.v
waterproof/set_search_depth/: .To_1.aux  .To_2.aux  .To_3.aux  .To_4.aux  .To_5.aux  To_1.v  To_2.v  To_3.v  To_4.v  To_5.v
waterproof/tactics/: .assume.aux  .because.aux  .by_we_know.aux  .choose.aux  .choose_such_that.aux  .either.aux  .goal_to_hint.aux  .rewrite_inequalities.aux  .take.aux  .unfold.aux  .we_know.aux  .we_need_to_show.aux  .we_show_both_directions.aux  .we_show_both_statements.aux  assume.v  because.v  choose.v  choose_such_that.v  contradiction.v  define.v  either.v  goal_to_hint.v  goal_wrappers.v  induction.v  manipulate_negation.v  propagate_negation_backwards.v  rewrite_inequalities.v  simplify_chains.v  take.v  unfold.v  we_know.v  we_need_to_show.v  we_show_both_directions.v  we_show_both_statements.v  write_as.v
waterproof/test/: .string_auxiliary_test.aux  .test_auxiliary_test.aux  .test_load_database.aux  .test_set_intuition.aux  .test_set_search_depth.aux  string_auxiliary_test.v  test_auxiliary_test.v  test_inequality_chains.v  test_load.v  test_load_database.v  test_manipulate_negation.v  test_message.v  test_set_definitions.v  test_set_intuition.v  test_set_search_depth.v  test_shield_automation.v
waterproof/waterprove/: .waterprove.aux  automation_subroutine.v  manipulate_negation.v  simplify_subsets.v  waterprove.v
(+257 files in other folders)
