opam-version: "2.0"
name: "coq-waterproof"
version: "2.1.1+8.20"
maintainer: "Jim Portegies <j.w.portegies@tue.nl>"
authors: [
  "Jelle Wemmenhove"
  "Balthazar Pathiachvili"
  "Cosmin Manea"
  "Lulof Pirée"
  "Adrian Vrămuleţ"
  "Tudor Voicu"
  "Jim Portegies <j.w.portegies@tue.nl>"
]

synopsis: "Coq proofs in a style that resembles non-mechanized mathematical proofs"
description: """
The coq-waterproof library allows you to write Coq proofs in a style that resembles non-mechanized mathematical proofs.
Mathematicians unfamiliar with the Coq syntax are able to read the resulting proof scripts.
"""

license: "LGPL-3.0-or-later"
homepage: "https://github.com/impermeable/coq-waterproof"
dev-repo: "git+https://github.com/impermeable/coq-waterproof.git"
bug-reports: "https://github.com/impermeable/coq-waterproof/issues"

depends: [
  "ocaml" {>= "4.09.0"}
  "coq" {>= "8.20" & < "8.21" | = "dev"}
  "dune" {>= "3.6."}
]

build: [
  ["dune" "build" "-p" "coq-waterproof" "@install"]
]

install: [
  ["dune" "install" "-p" "coq-waterproof"]
]

available: arch != "s390x"

tags: [
  "keyword:mathematics education"
  "category:Mathematics/Education"
  "date:2023-11-04"
  "logpath:Waterproof"
]
