(coq.theory
  (name Waterproof)
  (package coq-waterproof)
  (flags :standard)
  (plugins coq-waterproof.plugin rocq-runtime.plugins.ltac rocq-runtime.plugins.ltac2))

(include_subdirs qualified)

(rule
 (alias runtest)
 (deps (alias ../install))
 (action (progn
             (echo "Testing:")
             (run pwd)
             (run python3 ../../../tests/test-folder.py ../../../../waterproof-exercises)
)))
