(coq.theory
  (name Waterproof)
  (package coq-waterproof)
  (flags :standard)
  (theories Ltac2)
  (plugins coq-waterproof.plugin coq-core.plugins.ltac coq-core.plugins.ltac2))

; For later versionos of Coq, this should be:
; (theories Stdlib Ltac2)
; (plugins coq-waterproof.plugin rocq-runtime.plugins.ltac rocq-runtime.plugins.ltac2)

(include_subdirs qualified)

(rule
 (alias runtest)
 (deps
  (package coq-waterproof)
  (package coq-lsp)
  %{project_root}/tests/test-folder.py
  (source_tree %{workspace_root}/test-exercises))
 (action (progn
             (echo "Testing:")
             (run pwd)
             (run python3 %{project_root}/tests/test-folder.py %{workspace_root}/../../test-exercises/)
)))
